--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
 
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
   </head>
+  <p class="notice"><%= notice %></p>
+  <p class="alert"><%= alert %></p>
 
   <body>
     <%= yield %>
