--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
 <h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+
+<%= button_to "login", new_user_session_path %>
+<br />
+<%= button_to "logout", destroy_user_session_path, method: :delete  %>
