Added a navbar and some style for the sign up and sign in forms

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,36 +1,36 @@
-<h2>Créer un compte</h2>
+<div class="container text-center form my-5">
+<h2 class="mb-5">Créer un compte</h2>
+  <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+    <%= f.error_notification %>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
+    <div class="form-inline">
+      <%= f.input :firstname,
+                  required: true,
+                  autofocus: true %>
+      <%= f.input :lastname,
+                  required: true,
+                  autofocus: true %>
+    </div>
+      <%= f.input :email,
+                  required: true,
+                  autofocus: true,
+                  input_html: { autocomplete: "email" }%>
+      <%= f.input :password,
+                  required: true,
+                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.input :password_confirmation,
+                  required: true,
+                  input_html: { autocomplete: "new-password" } %>
+      <%= f.check_box :cguvalidated?,
+                  :as => :boolean,
+                  :label => false,
+                  :inline_label => true,
+                  label: 'Est-ce que tu acceptes les CGUs ?'%>
+    <div class="form-actions">
+      <%= f.button :submit, "Sign up", class: 'main-button text-center' %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :firstname,
-                required: true,
-                autofocus: true %>
-    <%= f.input :lastname,
-                required: true,
-                autofocus: true %>
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.check_box :cguvalidated?,
-                :as => :boolean,
-                :label => false,
-                :inline_label => true,
-                label: 'Est-ce que tu acceptes les CGUs ?'%>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
-
+  <% end %>
+</div>
 <%= render "devise/shared/links" %>
