--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,6 @@
-<h1>Pages#home</h1>
-
-<%= button_to "login", new_user_session_path %>
-<br />
-<%= button_to "logout", destroy_user_session_path, method: :delete  %>
+<div class="banner">
+  <div class="container">
+    <h1>Nous concevons et construisons des solutions technologiques qui vous font avancer.</h1>
+    <a href="#" class="main-button">En savoir plus</a>
+  </div>
+</div>
