--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,7 +14,7 @@
           <li class="nav-item dropdown">
             <%= image_tag "photo-tristan.jpg", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
             <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-              <%= link_to "Editer mon profil", edit_user_path, class: "dropdown-item" %>
+              <%= link_to "Editer mon profil", edit_user_registration_path(current_user), class: "dropdown-item" %>
               <%= link_to "Me déconnecter", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
             </div>
           </li>
