--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -3,6 +3,8 @@
   border: 1px solid black;
   border-radius: 5px;
   padding: 20px;
+  background-color: white;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, .1);
 }
 
 .form-inline {
