--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -19,6 +19,7 @@
       <%= f.input :lastname,
                   required: true,
                   autofocus: true %>
+      <%= f.input :interest, as: :radio_buttons, collection: ["JavaScript", "Ruby", "PHP"], input_html: { multiple: true } %>
     </div>
 
     <div class="form-actions">
